Fix map height on mobile sizes

--- a/src/components/_JournalPageMap.scss
+++ b/src/components/_JournalPageMap.scss
@@ -2,4 +2,11 @@
   height: 100%;
   width: 100%;
   position: relative;
+  min-height: 400px;
+
+  @include media-breakpoint-up(md) {
+    @media (min-height: 350px) {
+      min-height: unset;
+    }
+  }
 }
